# OTNetwork

./: CMakeLists.txt  OTNetwork.cpp  README.md  custom_op.txt  formula.txt  gradtest.jl
src/: CMakeLists.txt  EMD.h  EMD_wrapper.cpp  LICENSE  network_simplex_simple.h  test.cpp
